# Severstal-FastApi

./: .gitignore  README.md  config.py  pyproject.toml
migrations/: env.py
migrations/versions/: b4819fef7b32_database_update.py
severstal_fastapi/: database.py  endpoints.py  main.py  models.py  schemas.py  service.py
tests/: conftest.py  test_cases.py
